<resources>
    <string name="app_name">NBW</string>

    <!--Waiver Fragment strings-->
    <string name="waiver_title">Waiver Fragment</string>
    <string name="waiver_layouttitle">NEIGHBORHOOD BIKE WORKS</string>
    <string name="waiver_subtitle">PARTICIPATION AGREEMENT</string>
    <string name="waiver_text"><b>Placeholder Agreement Text</b>

        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Eu lobortis elementum nibh tellus.
        Facilisis volutpat est velit egestas dui id ornare. Rutrum quisque non tellus orci ac auctor
        augue mauris augue. Risus commodo viverra maecenas accumsan lacus. Fusce ut placerat orci
        nulla pellentesque dignissim enim sit amet. Ut sem viverra aliquet eget sit amet tellus. Nec
        dui nunc mattis enim ut. Id interdum velit laoreet id donec ultrices. Vitae congue mauris
        rhoncus aenean vel elit scelerisque.Scelerisque eu ultrices vitae auctor eu augue. Posuere
        morbi leo urna molestie. Ullamcorper sit amet risus nullam eget felis. Erat velit scelerisque
        in dictum. Tempus egestas sed sed risus pretium quam vulputate dignissim. Facilisis volutpat
        est velit egestas dui id ornare arcu. Pretium viverra suspendisse potenti nullam ac tortor.
        Faucibus a pellentesque sit amet. Varius vel pharetra vel turpis nunc eget lorem. Id velit ut
        tortor pretium viverra suspendisse. Ipsum suspendisse ultrices gravida dictum fusce ut placerat
        orci. Mi in nulla posuere sollicitudin aliquam ultrices. Mollis nunc sed id semper risus in
        hendrerit. Maecenas pharetra convallis posuere morbi leo urna molestie at. Mi in nulla
        posuere sollicitudin aliquam. Elit scelerisque mauris pellentesque pulvinar pellentesque
        habitant. Aliquam sem fringilla ut morbi. Sagittis aliquam malesuada bibendum arcu vitae.

        \n\n<b>Description of Other Rights and Limitations</b>

        \n\nScelerisque eu ultrices vitae auctor eu augue. Posuere morbi leo urna molestie.
        Ullamcorper sit amet risus nullam eget felis. Erat velit scelerisque in dictum. Tempus
        egestas sed sed risus pretium quam vulputate dignissim. Facilisis volutpat est velit egestas
        dui id ornare arcu. Pretium viverra suspendisse potenti nullam ac tortor. Faucibus a
        pellentesque sit amet. Varius vel pharetra vel turpis nunc eget lorem. Id velit ut tortor
        pretium viverra suspendisse. Ipsum suspendisse ultrices gravida dictum fusce ut placerat
        orci. Mi in nulla posuere sollicitudin aliquam ultrices. Mollis nunc sed id semper risus in
        hendrerit. Maecenas pharetra convallis posuere morbi leo urna molestie at. Mi in nulla
        posuere sollicitudin aliquam. Elit scelerisque mauris pellentesque pulvinar pellentesque
        habitant. Aliquam sem fringilla ut morbi. Sagittis aliquam malesuada bibendum arcu vitae.

        \n\n<b>I have read this agreement, fully understand its terms, understand that I have given up
        substantial rights by signing it and have signed it freely and without any inducement or
        assurance of any nature and intend it to be a complete and unconditional release of all
        liability to the greatest extent allowed by law and agree that if any portion of this
        agreement is held to be invalid, the balance, notwithstanding, shall continue in full force
        and effect.</b>

    </string>
    <string name="waiver_end"> I have READ and AGREED to the terms and conditions (required)</string>
    <string name="waiver_signature">Sign your name</string>
    <string name="waiver_date">Date (MM/DD/YYYY)</string>
    <string name="sign_waiver">Sign</string>
    <string name="agreement_card_view">You must read, sign and agree to the terms enclosed herein in order
    to participate in Neighborhood Bike Works.</string>

    <!--Queue Fragment strings-->
    <string name="queue_title">Sign-in Queue</string>
    <string name="enqueue">Add yourself to the queue</string>
    <string name="dequeue">Remove yourself from the queue</string>
    <string name="queue_size">Number of people currently in the queue: 0</string>

    <!--Map Fragment strings-->
    <string name="map_title">Map Fragment</string>
    <string name="map_card_view">Get directions to our campus, learn about our store hours and our
        Bike Church Community Workshop!</string>
    <string name="shop_hours"><b>Shop Hours</b> \n\n Tuesday - Friday: 3:00PM - 6:00PM \n\n Saturdays and Sundays: 12:00PM
        - 4:00PM</string>
    <string name="repair_stands_et_al"><b>We are closed on Mondays \n\n Use of Repair Stands only available during Bike Church</b></string>
    <string name="church_hours"><b>Bike Church</b> \n\n Tuesday - Thursday: 6:30PM - 9:00PM \n\n Saturdays and Sundays: 12:00PM - 4:00PM</string>
    <string name="women_and_LGBTQIA"><b>Wednesday Bike Church</b> is limited to those identifying as women or
        transgender, which includes all gender identities beyond cisgender, i.e. transgender,
        genderqueer, nonbinary, genderfluid, and so on. We hold this space for women/trans/queer
        people in an effort to make cycling more accessible to women/trans/queer folks who may find
        all-gender shops unwelcoming or unsafe. </string>

    <!--Login Fragment strings-->
    <string name="login_title">Login to Your Account</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome to Neighborhood Bike Works</string>
    <string name="email">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="signup_question"><u>Don\'t have an account?</u></string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="string_divider">&#160;&#160;&#160;&#160;</string>

    <!--Signup fragment settings-->
    <string name="signup_title">Sign Up with NBW</string>
    <string name="name">John Doe</string>
    <string name="age_consent">I am over 18 years old.</string>
    <string name="verify_password">Verify Password</string>
    <string name="signup">Sign Up</string>

    <!--UserChoice Fragment strings-->
    <string name="user_choice_title">User Choice Fragment</string>
    <string name="signin_message">Welcome to Neighborhood Bike Works!</string>

    <!--Orientation Fragment strings-->
    <string name="orientation_title">Orientation Fragment</string>
    <string name="orientation_message">Orientation Videos</string>
    <string name="orientation_card_view">First time here? Check out these cool, quick orientation
    videos! They will save you a ton of time and confusion.</string>

    <!--Miscellaneous-->
    <string name="logout_title">Logout of Your Account</string>

</resources>
