<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single"
        android:id="@+id/signedIn"
        android:visible="false">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout_title" />
        <item
            android:id="@+id/nav_user_choice"
            android:title="@string/user_choice_title"
            tools:ignore="DuplicateIds" />
        <item
            android:id="@+id/nav_waiver"
            android:title="@string/waiver_title" />
        <item
            android:id="@+id/nav_orientation"
            android:title="@string/orientation_title"
            tools:ignore="DuplicateIds" />
        <item
            android:id="@+id/nav_queue"
            android:title="@string/queue_title"
            tools:ignore="DuplicateIds" />
        <item
            android:id="@+id/nav_map"
            android:title="@string/map_title"
            tools:ignore="DuplicateIds" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/signedOut"
        android:visible="true">
        <item
            android:id="@+id/nav_login"
            android:title="@string/login_title" />
        <item
            android:id="@+id/nav_user_choice"
            android:title="@string/user_choice_title"
            tools:ignore="DuplicateIds" />
        <item
            android:id="@+id/nav_orientation"
            android:title="@string/orientation_title"
            tools:ignore="DuplicateIds" />
        <item
            android:id="@+id/nav_queue"
            android:title="@string/queue_title"
            tools:ignore="DuplicateIds" />
        <item
            android:id="@+id/nav_map"
            android:title="@string/map_title"
            tools:ignore="DuplicateIds" />
    </group>
</menu>