<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/waiver"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.waiver.WaiverFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:fontFamily="sans-serif-thin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waiver_layouttitle"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:lineSpacingMultiplier="1.2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waiver_subtitle"
            android:textSize="18sp"
            android:layout_marginTop="2.5dp"
            android:lineSpacingMultiplier="1.2"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0.75">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/waiver_text"
                android:textSize="16sp"
                android:lineSpacingMultiplier="1.2"/>

        </ScrollView>

        <CheckBox
            android:id="@+id/agreement_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waiver_end"
            android:layout_marginTop="15dp"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/waiver_signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/waiver_signature" />

        <EditText
            android:id="@+id/waiver_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/waiver_date" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>