<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/queue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.queue.QueueFragment"
    android:name="androidx.navigation.fragment.NavHostFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <Button
                android:id="@+id/enqueue_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enqueue"
                app:layout_constraintBottom_toTopOf="@+id/queue_recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_weight="0.5"/>

            <Button
                android:id="@+id/dequeue_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dequeue"
                app:layout_constraintBottom_toTopOf="@+id/queue_recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_weight="0.5"/>

        </LinearLayout>

        <TextView
            android:id="@+id/waiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/queue_size"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/queue_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>